<resources>
    <!--Application-->
    <string name="app_name">FieldIt</string>
    <string name="title_activity_maps">FieldIt</string>

    <string name="new_review_cancel_button">Cancel</string>
    <string name="new_review_save_button">Save</string>
    <string-array name="field_types">
        <item>Asphalt</item>
        <item>Grass</item>
        <item>Synthetic Grass</item>
        <item>Sand</item>
    </string-array>

    <!--Main Activity-->
    <string name="btn_add_field">Add Field</string>
    <string name="btn_refresh_fields">Refresh</string>
    <string name="btn_logout">Logout</string>

    <!-- Field Details-->
    <string name="field_details_edit_button">Edit Field</string>
    <string name="field_details_add_review">Add Review</string>

    <!-- New Field-->
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="field_description">Description</string>
    <string name="isLighted">Is Lighted</string>

    <string name="new_field_cancel_button">Cancel</string>
    <string name="new_field_save_button">Save</string>
    <string name="field_details_delete_button">Delete</string>
    <string name="title_activity_field">FieldActivity</string>

    <!-- Messages -->
    <string name="no_field_has_changed">You need to change at least one field</string>
    <string name="must_fill_all_fields">You must fill all the fields in the form</string>
    <string name="save_successfully">Field saved successfully!</string>
    <string name="save_error">An error occurred while saving...</string>
    <string name="delete_successfully">Field deleted successfully! </string>
    <string name="delete_error">An error occurred while deleting... </string>
    <string name="Action_canceled">Action canceled</string>
    <string name="field_added_successfully">Field added successfully!</string>
    <string name="review_added_successfully">Review added successfully!</string>
    <string name="fields_refreshed">All fields has been refreshed</string>
    <string name="no_connection">There is no connection! Cannot perform this action</string>

    <!--Login-->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">The entered password is too short, please enter at least 6 characters!</string>
    <string name="auth_failed">Identification Failed, please enter your details again or register</string>
    <string name="send_password_reset_email">Send password reset email</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">New User? Register now for free!</string>
    <string name="btn_link_to_login">Already Registered? Login!</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="btn_forgot_password">Forgot your Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[Back <<]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Edit</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Log Out</string>
    <string name="lbl_forgot_password">Forgot your Password?</string>
    <string name="forgot_password_msg">We only need your Mail to reset your Password</string>
    <string name="title_activity_signup">Register</string>
    <string name="enter_mail">Please enter your email address</string>
    <string name="enter_password">Please enter the password</string>
    <string name="short_password">The entered password is too short, please enter at least 6 characters!</string>
    <string name="reset_instructions_sent">Password reset instructions have been sent to your Mail!</string>
    <string name="reset_failed">No user exists for the entered Email address</string>
    <string name="bad_mail_format">Please enter a valid Email address</string>
    <string name="log_out_success">You have logged out successfully</string>
    <string name="register_success">You have registered successfully</string>
    <string name="register_failure">An error occured with the Registration, please try again later</string>
    <string name="field_details_review_list">Reviews</string>

    <string name="reviews_fetch_failed">An error occured while retrivieing reviews.</string>
    <string name="no_network">There is no internet connection, you can only watch the reviews list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
