<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layoutDirection="ltr"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.dell.fieldit.AddFieldFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/new_field_imageview"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/field" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isLighted"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <CheckBox
            android:id="@+id/new_field_isLighted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:id="@+id/new_field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ'קראטוןםפשדגכעיחלךףזסבהנמצתץ"
            android:inputType="text"
            android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <Spinner
            android:id="@+id/new_field_types_spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:id="@+id/new_field_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890."
            android:inputType="text"
            android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:id="@+id/new_field_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890."
            android:inputType="text"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_description"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:id="@+id/new_field_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="3"/>

    </LinearLayout>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/new_field_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/new_field_cancel_button"
        android:layout_weight="1" />

    <Button
        android:id="@+id/new_field_save_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/new_field_save_button"
        android:layout_weight="1"
        android:layout_gravity="right" />

    <ProgressBar
        android:id="@+id/new_progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</LinearLayout>
</LinearLayout>